--- a/GODemo/AnniversaryCell.xib
+++ b/GODemo/AnniversaryCell.xib
@@ -46,6 +46,10 @@
                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_anniversary_sideBar" translatesAutoresizingMaskIntoConstraints="NO" id="PPb-S7-ccc">
+                        <rect key="frame" x="4" y="0.0" width="312" height="3"/>
+                        <animations/>
+                    </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzj-en-Pqy">
                         <rect key="frame" x="245" y="-1" width="75" height="75"/>
                         <animations/>
@@ -54,12 +58,18 @@
                             <action selector="editButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="y3e-gL-akQ"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_anniversary_sideBar" translatesAutoresizingMaskIntoConstraints="NO" id="X3d-bR-ilz">
+                        <rect key="frame" x="4" y="92" width="312" height="3"/>
+                        <animations/>
+                    </imageView>
                 </subviews>
                 <animations/>
                 <constraints>
+                    <constraint firstItem="PPb-S7-ccc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="387-Ya-Is4"/>
                     <constraint firstAttribute="bottomMargin" secondItem="7J5-JJ-TgA" secondAttribute="bottom" constant="17" id="3Gf-Yn-fKB"/>
                     <constraint firstAttribute="trailingMargin" secondItem="bvi-aH-fgd" secondAttribute="trailing" constant="-8" id="C8J-pw-RLW"/>
                     <constraint firstItem="02f-Mx-LTv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="DOl-dp-YDx"/>
+                    <constraint firstItem="X3d-bR-ilz" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="4" id="Eed-7I-Bmk"/>
                     <constraint firstItem="Nzj-en-Pqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-9" id="Ffo-aJ-2Ia"/>
                     <constraint firstAttribute="bottomMargin" secondItem="a5U-Pd-91G" secondAttribute="bottom" constant="32" id="Fi3-bo-QPb"/>
                     <constraint firstItem="bvi-aH-fgd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="ItW-cG-kUG"/>
@@ -70,10 +80,14 @@
                     <constraint firstItem="a5U-Pd-91G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="aZ2-p9-2Ug"/>
                     <constraint firstAttribute="bottomMargin" secondItem="fiE-mg-twi" secondAttribute="bottom" constant="23" id="bBh-cr-sOV"/>
                     <constraint firstItem="bvi-aH-fgd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="bMR-pl-UCm"/>
+                    <constraint firstItem="PPb-S7-ccc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="bZ4-vJ-cBj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="02f-Mx-LTv" secondAttribute="bottom" constant="42" id="cnP-V1-jgC"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="PPb-S7-ccc" secondAttribute="trailing" constant="-4" id="dfl-hH-TJv"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Nzj-en-Pqy" secondAttribute="trailing" constant="-8" id="gJn-EU-xuU"/>
                     <constraint firstItem="02f-Mx-LTv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="14" id="nDS-t2-b17"/>
+                    <constraint firstItem="X3d-bR-ilz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="obs-N0-hUR"/>
                     <constraint firstAttribute="bottomMargin" secondItem="bvi-aH-fgd" secondAttribute="bottom" constant="-8" id="sdC-9o-7rH"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="X3d-bR-ilz" secondAttribute="trailing" constant="-4" id="tEY-Zg-T8n"/>
                     <constraint firstItem="7J5-JJ-TgA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="z3J-r9-v18"/>
                 </constraints>
             </tableViewCellContentView>
@@ -83,6 +97,7 @@
                 <outlet property="compareWithNowDate" destination="7J5-JJ-TgA" id="U5J-Mf-2M3"/>
                 <outlet property="dueDate" destination="fiE-mg-twi" id="CMh-ug-H8C"/>
                 <outlet property="editButton" destination="Nzj-en-Pqy" id="aFB-Jz-NTg"/>
+                <outlet property="topBar" destination="PPb-S7-ccc" id="L5h-GK-KsU"/>
             </connections>
             <point key="canvasLocation" x="575" y="408"/>
         </tableViewCell>
@@ -90,5 +105,6 @@
     <resources>
         <image name="_anniversary_Cell_Rect" width="375" height="100"/>
         <image name="_anniversary_Edit_Btn" width="75" height="75"/>
+        <image name="_anniversary_sideBar" width="250" height="3"/>
     </resources>
 </document>
