--- a/GODemo/AnniversaryCell.xib
+++ b/GODemo/AnniversaryCell.xib
@@ -50,7 +50,7 @@
                         <rect key="frame" x="4" y="2" width="313" height="3"/>
                         <animations/>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzj-en-Pqy">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzj-en-Pqy">
                         <rect key="frame" x="245" y="-1" width="75" height="75"/>
                         <animations/>
                         <state key="normal" image="_anniversary_Edit_Btn"/>
