--- a/GODemo/Base.lproj/Main.storyboard
+++ b/GODemo/Base.lproj/Main.storyboard
@@ -143,6 +143,47 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection id="mPD-Z1-Leo">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="HZf-AL-0Om">
+                                        <rect key="frame" x="0.0" y="303" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HZf-AL-0Om" id="PZ0-FU-dJo">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8l7-xj-Y4X">
+                                                    <rect key="frame" x="18" y="11" width="0.0" height="0.0"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpO-0M-vAJ">
+                                                    <rect key="frame" x="8" y="7" width="584" height="30"/>
+                                                    <animations/>
+                                                    <state key="normal" title="删除">
+                                                        <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="deleteBtn:" destination="B8r-t8-zea" eventType="touchUpInside" id="QLF-80-g3l"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="gpO-0M-vAJ" firstAttribute="trailing" secondItem="PZ0-FU-dJo" secondAttribute="trailingMargin" id="6bm-Xr-Zpk"/>
+                                                <constraint firstItem="8l7-xj-Y4X" firstAttribute="leading" secondItem="PZ0-FU-dJo" secondAttribute="leadingMargin" constant="10" id="8ua-KU-Qyd"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gpO-0M-vAJ" secondAttribute="bottom" constant="-2" id="HsG-rs-r6N"/>
+                                                <constraint firstItem="8l7-xj-Y4X" firstAttribute="top" secondItem="PZ0-FU-dJo" secondAttribute="topMargin" constant="3" id="Xvo-Jx-Yfl"/>
+                                                <constraint firstItem="gpO-0M-vAJ" firstAttribute="top" secondItem="PZ0-FU-dJo" secondAttribute="topMargin" constant="-1" id="i8B-fQ-84E"/>
+                                                <constraint firstItem="gpO-0M-vAJ" firstAttribute="leading" secondItem="PZ0-FU-dJo" secondAttribute="leadingMargin" id="ldJ-FC-gi1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="B8r-t8-zea" id="5X2-Nc-Cuj"/>
